Chapters, chapters everywhere..

--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -34,6 +34,9 @@
 \include{intro/analysis}
 
 %% Kontekst %%
+\include{kontekst/Theory}
+\include{kontekst/Hardware}
+\include{kontekst/Design}
 \include{kontekst/implementation}
 \include{kontekst/tests}
 
