--- a/Rapport/formalia/titelblad.tex
+++ b/Rapport/formalia/titelblad.tex
@@ -28,7 +28,7 @@ http://www.cs.aau.dk/}
 
 \begin{minipage}[t]{0.48\textwidth}
 \textbf{Title:} \\[5pt]\bigskip\hspace{2ex}
-Smart dumpster
+Dumpsty
 
 \textbf{Project:} \\[5pt]\bigskip\hspace{2ex}
 P5-project
