--- a/Rapport/intro/analysis.tex
+++ b/Rapport/intro/analysis.tex
@@ -1,5 +1,38 @@
 \chapter{Analysis}
 \label{chap:Analysis}
+From the analysis chapter it should be possible to derive the requirements for the smart dumpster, Dumpsty. The user stories will be initial and will help make the user requirements for the project. After the user requirements the information from the user stories will be analysed in greater detail, depicting three different phases of the process: Throwing, detecting/tracking and catching. These three phases will be the inspiration for the system requirements. 
+The analysis chapter will end up with a problem statement for the project. 
 
-\section{}
-\label{sec:}
+\section{User stories}
+\label{sec:User stories}
+As mentioned before the user stories should help make the user requirements for the project, two user stories have been made that showcase the use of Dumpsty.
+
+Benjamin is a software engineer who is tired of wasting his precious time on the job with walking back and forth from the waste bin in his office, and therefore wants to be able to throw his trash in the general direction of the bin instead. His aim when throwing the trash isn’t that of a trained basketball player, so he often has to pick up the litter after throwing it at the bin. \newline
+Benjamin wishes that the waste bin could move and collect the trash for him, so that he can throw his trash in the general direction of the bin, and the bin could then place itself in a way, that allows it to catch the trash before it lands on the floor. This would optimize the time Benjamin uses each day on collecting the trash he did not land in the waste bin.\newline
+If Benjamin throws at the bin from a designated side of a sensory camera, the robotic waste bin should identify the trash, move the bin to a place where it would be able to catch the trash, before it hits the ground.\newline
+If Benjamin throws outside a designated perimeter of the robotic waste bin, it should not try to catch the litter, as it would compute that it is not able to get to the point of catching before the trash hits the ground.\newline
+If Benjamin and another person from his office throws trash to the waste bin at the same time, it should prioritize the first identified object.
+
+\section{User requirements}
+\label{sec:User requirements}
+
+\section{System capabilities}
+\label{sec:System capabilities}
+
+\subsection{Throwing}
+\label{sec:ThrowingAnalysis}
+
+\subsection{Detecting and tracking}
+\label{sec:Detecting and trackingAnalysis}
+
+\subsection{Catching}
+\label{sec:CatchingAnalysis}
+
+\section{System requirements}
+\label{sec:System requirements}
+
+\section{Chapter Summary}
+\label{sec:Chapter Summary}
+
+\section{Problem statement}
+\label{sec:Problem statement}
