--- a/Rapport/intro/indledning.tex
+++ b/Rapport/intro/indledning.tex
@@ -1,6 +1,9 @@
 \chapter{Introduction}
 \label{chap:Introduction}
 
-An embedded system is a computer system which only have one or two functions. It is embedded as a part of a whole device, which then also includes hardware and/or mechanical components. Embedded systems are everywhere in our everyday lives. The range for embedded systems could be all from saving lives with pacemakers to fun gadgets.\citep{es}
+An embedded system is a computer system which only have a few functions. It is embedded as a part of a whole device, which then also includes hardware and/or mechanical components. Embedded systems are everywhere in our everyday lives. The range for embedded systems could be all from saving lives with pacemakers to fun gadgets.\citep{es}
 
-This project will be about a new gadget called X. When you are sitting in your chair, with an empty juicebox or an apple core and don't want to gget up to throw it out, you of cause throw it at the trash bin. If you miss the trash bin, you have to get up anyways and most of the time you have to clean up the mess you just did. X is a smart trash bin, which will calculated your throw and catch the thrash you threw at it. 
+An embedded system as a gadget, is a technological and small object or apparatus, which has a certain functionality. This functionality is limited to a certain niche, some of which are unnecessary. Gadgets are known as a trendy person’s accessory, and are also known from the cartoon Inspector Gadget. \newline
+In this project, the embedded system in consideration would be designed as a gadget, with a sole purpose of catching trash thrown at it. A trash bin that can catch trash would make the act of cleaning more fun and interactive, and the availability of each individual trash bin would be tremendously increased.
+
+For this gadget to be usable, it must be designed as a real-time system, as this system will have certain deadlines for each task to be executed in time. The trash bin must be able to identify an object coming towards it, make some computation to specify a point to catch it from, and then compute a way to catch the object. All this must be done before the object lands on the ground, which makes the use of real-time system design a part of this project. A real-time system is a software system which is subject to a real-time constraint, and the system must control and affect an environment, by receiving data and process these, within a certain time-limit.
