--- a/Rapport/formalia/forside.tex
+++ b/Rapport/formalia/forside.tex
@@ -8,7 +8,7 @@
 
 \phantom{hul}
 
-\textsl{\Huge Smart dumpster} \\ \vspace{1cm}
+\textsl{\Huge Dumpsty} \\ \vspace{1cm}
 
 \rule{13cm}{3mm} \\ \vspace{1.5cm}
 \vspace{1cm}
