--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -36,6 +36,7 @@
 %% Kontekst %%
 \include{kontekst/Theory}
 \include{kontekst/Hardware}
+\include{kontekst/SystemRequirements}
 \include{kontekst/Design}
 \include{kontekst/implementation}
 \include{kontekst/tests}
