--- a/Rapport/kontekst/Hardware.tex
+++ b/Rapport/kontekst/Hardware.tex
@@ -7,14 +7,17 @@
 \subsection{Microsoft Kinect}
 \label{sec:Microsoft Kinect}
 
-\subsection{LEGO NXT Gyroscope}
+\section{LEGO NXT Gyroscope}
 \label{sec:LEGO NXT Gyroscope}
 
-\subsection{LEGO NXT Accelerometer}
-\label{sec:LEGO NXT Accelerometer}
-
-\subsection{LEGO NXT Servo motor}
+\section{LEGO NXT Servo motor}
 \label{sec:LEGO NXT Servo motor}
 
 \section{Arduino}
 \label{sec:Arduino}
+
+\subsection{Arduino WifiShield}
+\label{sec: Arduino WifiShield}
+
+\subsection{Arduino MotorShield}
+\label{sec:Arduino MotorShield}
