--- a/Rapport/kontekst/Theory.tex
+++ b/Rapport/kontekst/Theory.tex
@@ -7,9 +7,19 @@ Skal vi have noget om det synsfelt vi har til at opfange bolden i??
 
 \section{Throwing}
 \label{sec:ThrowingTheory}
+When throwing the ball towards the trash bin, the group have two main methods in order to ensure that the sensor gets the most reliable data.
+
+The first one being, that when throwing the ball, one must be standing with the camera/sensor to his side. From testing the Microsoft Kinect this has provided the best test results, when measuring for the distance of throw and comparing to the distance the sensor has given us.
+
+The second method, is when throwing the ball, the trajectory curve of the ball, should have a high height so that it will cover more distance. In the future, this should not be a requirement either, but as of now, it should in order to give us more time to track, calculate and catch the object. 
+
 
 \section{Detecting and tracking}
 \label{sec:Detecting and trackingTheory}
+The way the trash bin detects and track an object, happens when the object is of a defined form, such as a tennis ball, which we have chosen for this project. By predefining the object the sensors should look for, the error margin becomes smaller, and therefore this is how we plan on doing it, for this project. For the future, this point should not be predefined, as trash can be in various forms. 
+
+In order to ensure that the sensor detect where the object is, the object has to come from a specific angel, that provides the sensor with the best actual distance. Once again, this is just for the project as of now, and in the future, this should not affect the way detecting works, as trash can be thrown from multiple angels, depending on the location of the person and the trash bin.
+
 
 \section{Catching}
 \label{sec:catchingTheory}
