LEGO NXT Servo Motor
NXT Motor hardware documentation

--- a/Rapport/kontekst/Hardware.tex
+++ b/Rapport/kontekst/Hardware.tex
@@ -12,6 +12,7 @@
 
 \section{LEGO NXT Servo motor}
 \label{sec:LEGO NXT Servo motor}
+For the robot to be able to move, it would need motors. In this project the LEGO NXT 9v Servo motors has been used, which at full power with no load can reach 170 RPM. These motors has a gear range of 1:48, split on the gear train in the motor. This motor includes an optical fork to provide the rotation sensor functionality, which can provide data of motor rotations down to a \(1^{\circ}\) precision.
 
 \section{Arduino}
 \label{sec:Arduino}
