--- a/Rapport/kontekst/Hardware.tex
+++ b/Rapport/kontekst/Hardware.tex
@@ -6,6 +6,9 @@
 
 \subsection{Microsoft Kinect}
 \label{sec:Microsoft Kinect}
+The Microsoft Kinect sensor, enables the robot to gather information about flying objects that it can catch. The Kinect is a motion sensing device that is able to gather information about the location of an object, including the depth of an object (how far it is from the sensor), using an infrared camera. By using the depth information, the Kinect is able to semi-accurately locate the object in 3 dimensions.
+By spotting objects multiple positions in these three dimensions, it is possible to calculate the path of the moving object, and thereby predict the position in which it is going to land. This information can be send to the robot, so the robot can move into position to possibly catch the object before it hits the ground.
+
 
 \section{LEGO NXT Gyroscope}
 \label{sec:LEGO NXT Gyroscope}
