Rapport shit - Hardware

--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -42,6 +42,27 @@
 	note = {Accessed: 25-09-2016}
 }
 
+@manual{Servo,
+	author = { Philippe "Philo" Hurbain},
+	address = {\url{http://www.philohome.com/motors/motorcomp.htm}},
+	title = {LEGO® 9V Technic Motors compared characteristics},
+	note = {Accessed: 12-10-2016}
+}
+
+@manual{ams,
+	author = {Arduino.cc},
+	address = {\url{https://www.arduino.cc/en/Main/ArduinoMotorShieldR3}},
+	title = {Arduino Motor Shield},
+	note = {Accessed: 18-10-2016}
+}
+
+@manual{a,
+	author = {Arduino.cc},
+	address = {\url{https://www.arduino.cc/en/Main/ArduinoBoardMega2560}},
+	title = {Arduino Mega 2560},
+	note = {Accessed: 25-09-2016}
+}
+
 @manual{es2,
 	author = {Techopedia.com},
 	address = {\url{https://www.techopedia.com/definition/3636/embedded-system}},
