--- a/Rapport/formalia/forord.tex
+++ b/Rapport/formalia/forord.tex
@@ -1,8 +1,8 @@
 \chapter*{Preface}
-This project has been developed as part of the fourth semester project by project group SW408F16 from Aalborg University, Software Engineering, from the period 1st February to 26th May 2016 . \newline
-The project is based on the \textit{Aalborg-model}, study method, where problem and project based learning is the focus. The theme of this semester was to create a compiler for a new language. To do so, some subjects were introduced and the subject the group chosen, was \textit{Domain Specific Language for Robocoders }. \newline
+This project has been developed as part of the fourth semester project by project group SW510E16 from Aalborg University, Software Engineering, from the period 2nd September to 21st December 2016 . \newline
+The project is based on the \textit{Aalborg-model}, study method, where problem and project based learning is the focus. The theme of this semester was to make an embedded system. The project group chose to make a trash bin that should be able to catch the trash thrown at it. \newline
 
-The group would like to thank supervisor, Giovanni Bacci for his very much appreciated advice and guidance during the whole project. 
+Thank the people who should be thanked for helping making the project, here. 
 \newline
 \newline
 \newline
@@ -28,10 +28,8 @@ The group would like to thank supervisor, Giovanni Bacci for his very much appre
 \end{table}
 
 \chapter*{Reading guide}
-This project has followed the courses Syntax and Semantics \& Languages and Compiler. The context of this project has been written according to the order the course materials was taught and learned. \newline
-
 The sources in the report are being referred to by the Harvard citation method. This includes a last name and a publication year in the report, and in the \textit{\textbf{Bibliography}} chapter all the used sources are listed in alphabetical order. \newline
-\textit{An example of a source in the text could be: \textbf{\citep{Sebesta}}.}
+\textit{An example of a source in the text could be: \textbf{\citep{Servo}}.}
 \newline
 If the source is on the left side of a dot, then that source refers only to that sentence and if the source is on the right side of a dot, then it refers to the whole section. 
 
