--- a/Rapport/kontekst/Theory.tex
+++ b/Rapport/kontekst/Theory.tex
@@ -3,7 +3,8 @@
 
 \section{Field of view}
 \label{sec:Field of view}
-Skal vi have noget om det synsfelt vi har til at opfange bolden i??
+Through out the report there will be mentioned the field of view and the predefined area. The field of view is the area where the sensor can detect the thrown objects, which is delimited by the sight of the sensor. \newline
+The robots predefined area is an area marked uo with tape on the floor. Within this area is where the robot should catch the thrown object, which is detected by the sensor. Outside the predefined area, the robot have a specific starting position, from where it will start at for each throw. 
 
 \section{Throwing}
 \label{sec:ThrowingTheory}
