--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -36,8 +36,7 @@
 %% Kontekst %%
 \include{kontekst/Theory}
 \include{kontekst/Hardware}
-\include{kontekst/SystemRequirements}
-\include{kontekst/Design}
+\include{kontekst/IncrementOne}
 \include{kontekst/implementation}
 \include{kontekst/tests}
 
