--- a/Rapport/kontekst/Hardware.tex
+++ b/Rapport/kontekst/Hardware.tex
@@ -1,24 +1,91 @@
 \chapter{Hardware}
-\label{chap:Hardware}
+\label{chap:Hardware} 
+This chapter will describe the hardware considerations for the project, the hardware’s capabilities and it’s limitations. The limitations and capabilities will be in consideration when reviewing the requirements later in this chapter, to specify how the hardware can meet the requirements.
 
 \section{Sensors}
 \label{sec:Sensors}
+Sensors were used to measure the environment outside the arduino and to enable the arduino to understand the outside environment. The sensors utilized are described below in individual sections. 
 
 \subsection{Microsoft Kinect}
 \label{sec:Microsoft Kinect}
+The Microsoft Kinect sensor, enables the robot to gather information about flying objects that it can catch. The Kinect is a motion sensing device that is able to gather information about the location of an object, including the depth of an object (how far it is from the sensor), using an infrared camera. By using the depth information, the Kinect is able to semi-accurately locate the object in 3 dimensions.
+By spotting objects multiple positions in these three dimensions, it is possible to calculate the path of the moving object, and thereby predict the position in which it is going to land. This information can be send to the robot, so the robot can move into position to possibly catch the object before it hits the ground.
 
-\section{LEGO NXT Gyroscope}
+\subsection{LEGO NXT Gyroscope}
 \label{sec:LEGO NXT Gyroscope}
+A gyroscope can be used to measure rotation of the robot. A gyroscope works, by having a spinning disc that creates resistance when the robot is turned. This resistance is measured by the Lego NXT Gyro, and returned as a value representing the number of degrees per second of rotation. 
+
+\subsection{LEGO NXT Accelerometer}
+\label{sec:LEGO NXT Accelerometer}
+An Accelerometer is a device that measures the force affecting it. The Lego NXT Accelerometer measures this information, and sends it to the robot, to provide capability for the robot to calculate its acceleration and possibly its location.
 
 \section{LEGO NXT Servo motor}
 \label{sec:LEGO NXT Servo motor}
-For the robot to be able to move, it would need motors. In this project the LEGO NXT 9v Servo motors has been used, which at full power with no load can reach 170 RPM. These motors has a gear range of 1:48, split on the gear train in the motor. This motor includes an optical fork to provide the rotation sensor functionality, which can provide data of motor rotations down to a \(1^{\circ}\) precision.
+For the robot to be able to move, it would need wheels powered by motors. In this project the LEGO NXT 9v Servo motors has been used, which at full power with no load can reach 170 RPM. These motors has a gear range of 1:48, split on the gear train in the motor. \citep{Servo} This motor includes an optical fork to provide the rotation sensor functionality, which can provide data of motor rotations down to a \(1^{\circ}\) precision.
+
+The group decided to do their own calculations for the RPM and a calculation for mm/s for the servo motor. 
+
+The diameter of the wheel: 56mm \newline
+The circumference of the wheel: 56 \begin{math}\cdot \pi \end{math} = 175.929mm
+
+The robot was programmed to drive forward for 10 seconds and was observed to travel a distance of 2550mm, which means it travels with a speed of 255mm/s. \newline
+The motor’s RPM is: (2230 \begin{math} \cdot \end{math} 175.929) \begin{math} \cdot \end{math} 6 = 86.966 RPM.
+
+%The travel time of a normal underhand throw have been measured, and the same for a throw where the object bounces on the ground.\newline
+%The travel time of a thrown object from when it leaves the hand to impact in the predefined area, is about 1.1second. This means that the robot will only be able to catch an object about 280mm away from its start position. \newline
+%If the object is bounced on the ground before it enters the predefined area, and must bounce atleast twice, the travel time of the object, from when the ball leaves the hand to impact in the predefined area, is 2 seconds. This will give the robot a range of 550mm away from its start position.  
 
 \section{Arduino}
 \label{sec:Arduino}
+We chose the arduino mega 2560 because we wanted to introduce real time problems and have limited computational power to introduce interesting problems as a learning experience. At the start of the project, we tried a NXT but it would’ve been too simple to work with. We actually ordered an arduino uno for even less memory, but there weren’t any left, so we went with the mega 2560. \citep{a}
 
-\subsection{Arduino WifiShield}
-\label{sec: Arduino WifiShield}
+Some specs:\newline
+Flash memory: 256KB (8 used by bootloader)\newline
+SRAM: 8KB\newline
+EEPROM: 4KB\newline
+Clock Speed: 16 MHz\newline
+Weight: 37g
 
-\subsection{Arduino MotorShield}
-\label{sec:Arduino MotorShield}
+For the making the robot connect to the program for the Microsoft Kinect and controlling the DC motors, an Arduino Wifi Shield and Arduino Motor shield will be used in the project and explained below.
+
+\subsection{Arduino Wifi Shield}
+\label{sec: Arduino Wifi Shield}
+The Arduino Motor Shield is needed for the project to control the two DC motors independently. Without the motor shield the robot would only be able to run forward and backwards with both tires at the same time, not making it possible to turn. 
+To run the motor shield an external power source is needed, in this case two 9V batteries in a serial circuit. 
+
+\subsection{Arduino Motor Shield}
+\label{sec:Arduino Motor Shield}
+The Arduino Motor Shield is needed for the project to control the two DC motors independently. Without the motor shield the robot would only be able to run forward and backwards with both tires at the same time, not making it possible to turn. 
+To run the motor shield an external power source is needed, in this case two 9V batteries in a serial circuit. \citep{ams}
+
+\section{Requirements}
+\label{sec:HWrequirements}
+Considering all the limitations and the capabilities of the hardware for the project, the requirements from the previous chapter will be reviewed and new requirements will be added if necessary. New requirements will be mark with red. 
+
+\begin{itemize}
+\item The trash bin should catch the trash if the user throws it towards the trash bin and within a predefined area
+\begin{itemize}
+\item \textcolor{red}{The robots predefined area should be calculated from the hardware limitations of the motors’ speed}
+\end{itemize}
+\item The robot should know where it is positioned
+\begin{itemize}
+\item \textcolor{red}{The robot should have a starting position, from where it should be able to calculate it's current position }
+\end{itemize}
+\item The robot should be able to detect and track the thrown trash
+\begin{itemize}
+\item \textcolor{red}{The thrown trash should be detected and tracked by a Microsoft Kinect}
+\item \textcolor{red}{The Kinect should send the coordinates of the impact point of the trash to the robot}
+\end{itemize}
+\item The robot should know where the the thrown trash will land
+\begin{itemize}
+\item \textcolor{red}{Trajectory prediction should be used to calculate impact point of the thrown trash}
+%\item \textcolor{red}{The trajectory prediction should include a bounce prediction}
+%\item \textcolor{red}{The bounce-shot should be thrown from a designated side of the camera}
+%\item \textcolor{red}{The bounce-shot should bounce into the predefined area where the robot should catch the trash within }
+\end{itemize}
+\item The robot should be able to move the trash bin, such that the thrown trash lands inside the bin
+\begin{itemize}
+\item \textcolor{red}{The robot should be able to turn, drive forward and drive backwards with a certain speed}
+\item \textcolor{red}{Multiple trash thrown should not be considered}
+\end{itemize}
+\end{itemize}
