--- a/Rapport/formalia/forord.tex
+++ b/Rapport/formalia/forord.tex
@@ -40,3 +40,18 @@ The listings of source code are also referred to as the tables and figures.
 
 Source code in the report are listed as code snippets, and they're not necessarily the same as the source code, meaning that code snippets may be shorter than the actual source code or missing comments from the source code. In order to show that, the use of the following three dots are used: \textit\textbf{{"..."}}, which means that some of the source code isn't listed in the code snippet, as it may be long and irrelevant. 
 
+\chapter*{Process model}
+The process model is a meld of elements from both plan driven and agile development. The process is plan driven in so far as to include a clear goal of what the initial requirements of the system are. The process model is very agile in that, although there is a clear outline as to what the requirements are, these are incrementally(or iteratively) approached, with a simple starting point becoming increasingly covering of the project vision.
+
+The increments will be split up into four sections. Initially some of the already known requirements will be considered, and these requirements will be the topic of the increment.
+After the initial requirement consideration, what is needed to fulfil the requirements will be explained, followed by an explanation of the implementation, and a final evaluation of the increment will be described. The evaluation will concern whether the requirements were fulfilled, and changes to the requirement list can happen.
+
+The process includes emphasis on a small group with tasks usually undertaken by two group members or more, trying to avoid a single individual stuck in a task without aid from other group members. This is also to promote that knowledge gained is quickly communicated and exchanged by group members. The process uses pair programming because it promotes better programming and is usually very motivating in socially engaging issues with the aid of the other project members.
+
+\begin{figure}[h]
+\centering
+\includegraphics[scale=0.35]{billeder/process-model}
+\caption{Process model used for the project}
+\label{pm}
+\end{figure}
+
