--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -23,7 +23,7 @@ The requirements which will be considered in this increment is mark with a blue 
 \end{itemize}
 \item The robot should know where the the thrown trash will land
 \begin{itemize}
-\item Trajectory prediction should be used to calculate impact point of the thrown trash
+\item \textcolor{blue}{Trajectory prediction should be used to calculate impact point of the thrown trash}
 %\item \textcolor{red}{The trajectory prediction should include a bounce prediction}
 %\item \textcolor{red}{The bounce-shot should be thrown from a designated side of the camera}
 %\item \textcolor{red}{The bounce-shot should bounce into the predefined area where the robot should catch the trash within }
@@ -35,9 +35,11 @@ The requirements which will be considered in this increment is mark with a blue 
 \end{itemize}
 \end{itemize}
 
+These requirements are rudimentary, and the very essence of the project lies within the fulfilment of these requirements. In this increment the fundamentals of the robot’s movement should be implemented, the predefined area should be calculated, a starting point for this area should be determined and the Microsoft Kinect should be able to detect and track an object with the use of trajectory prediction.
 
 \section{System design}
 \label{sec:i1System Design}
+
 
 \section{Implementation}
 \label{sec:i1Implementation}
