--- a/Rapport/kontekst/Hardware.tex
+++ b/Rapport/kontekst/Hardware.tex
@@ -85,7 +85,7 @@ Considering all the limitations and the capabilities of the hardware for the pro
 \end{itemize}
 \item The robot should be able to move the trash bin, such that the thrown trash lands inside the bin
 \begin{itemize}
-\item \textcolor{red}{The robot should be able to turn, drive forward and drive backwards with a certain speed}
+\item \textcolor{red}{The robot should be able to turn, drive forward and drive backwards}
 \item \textcolor{red}{Multiple trash thrown should not be considered}
 \end{itemize}
 \end{itemize}
