--- a/Rapport/kontekst/Theory.tex
+++ b/Rapport/kontekst/Theory.tex
@@ -17,16 +17,16 @@ The second method, is when throwing the ball, the trajectory curve of the ball, 
 
 \section{Detecting and tracking}
 \label{sec:Detecting and trackingTheory}
-The way the trash bin detects and track an object, happens when the object is of a defined form, such as a tennis ball, which we have chosen for this project. By predefining the object the sensors should look for, the error margin becomes smaller, and therefore this is how we plan on doing it, for this project. For the future, this point should not be predefined, as trash can be in various forms. 
+The way the trash bin detects and track an object, happens when the object is of a defined form, such as a table tennis ball, which we have chosen for this project. By predefining the object the sensors should look for, the error margin becomes smaller. % For the future, this point should not be predefined, as trash can be in various forms. 
 
-In order to ensure that the sensor detect where the object is, the object has to come from a specific angel, that provides the sensor with the best actual distance. Once again, this is just for the project as of now, and in the future, this should not affect the way detecting works, as trash can be thrown from multiple angels, depending on the location of the person and the trash bin.
+In order to ensure that the sensor detect where the object is, the object has to come from a specific side of the Kinect, that provides the sensor with the best actual distance. Once again, this is just for the project as of now, and in the future, this should not affect the way detecting works, as trash can be thrown from multiple angels, depending on the location of the person and the trash bin.
 
 
 \section{Catching}
 \label{sec:catchingTheory}
 Catching concerns estimating where the thrown object will fall, and then moving the robot to that location before the objects lands to successfully catch the thrown object. In order to achieve the aforementioned objective, the following steps must be completed:
 
-Tracking the projectile trajectory to estimate a location to catch or intercept the thrown object. The tracking is a continuous process and the the estimated location is transmitted to the robot repeatedly in intervals in the order of milliseconds. As the estimated location is transmitted to the robot, it will move accordingly to its relative position to the estimated location, this assumes some form coordinating system to enable the robot to move accurately. This could include first estimating whether or not the robot will even be able to reach the location before the object lands, or just move towards it regardless. It could also consider its own dimensions, as the bucket it will use to catch the robot puts restraints on how low a position the object can be, before the robot must in place to catch it, otherwise it will collide with the side of the bucket. 
+Tracking the projectile trajectory to estimate a location to catch or intercept the thrown object. The tracking is a continuous process and the estimated location is transmitted to the robot repeatedly in intervals in the order of milliseconds. As the estimated location is transmitted to the robot, it will move accordingly to its relative position to the estimated location, this assumes some form coordinating system to enable the robot to move accurately. This could include first estimating whether or not the robot will even be able to reach the location before the object lands, or just move towards it regardless. It could also consider its own dimensions, as the bucket it will use to catch the robot puts restraints on how low a position the object can be, before the robot must in place to catch it, otherwise it will collide with the side of the bucket. 
 
 (As a note, could include a formula of time it takes to turn, and its forward speed.)
 
