yo oyo oyoo yoy oy

--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -39,6 +39,7 @@ These requirements are rudimentary, and the very essence of the project lies wit
 
 \section{System design}
 \label{sec:i1System Design}
+The following sections describes how the marked requirements in \ref{sec:i1Requirements} will be attempted to be fulfilled. The theories and ideas behind will be explained.
 
 \subsection{Throwing}
 \label{sec:i1Throwing}
@@ -50,14 +51,52 @@ The group decided after several tests to let the trash (still a table tennis bal
 
 \subsection{Predefined area}
 \label{sec:i1Predefined area}
-The robots predefined area, is a field where the robot should catch the ball within. As mentioned in  section \ref{sec:i1Throwing}, the bouncing throw would have a travel time of 2 - 2.15 seconds, before landing in the predefined area. The predefined area was calculated using the robot itself. The robot was placed marking its starting point, which will be its starting point every time. It was set to turn a specific number of degrees and moving forward, after two seconds the robot would stop. The place the robot stops is marked aswell, which lead to the predefined area seen in figure \label{figure:Predefined area}.
+The robots predefined area, is a field where the robot should catch the ball within. As mentioned in  section \ref{sec:i1Throwing}, the bouncing throw would have a travel time of 2 - 2.15 seconds, before landing in the predefined area. The predefined area was calculated using the robot itself. The robot was placed marking its starting point, which will be its starting point every time. It was set to turn a specific number of degrees and moving forward, after two seconds the robot would stop. The place the robot stops is marked aswell, which lead to the predefined area seen in figure \ref{figure:Predefined area}. The predefined area have an area of of 2851.5cm\begin{math}^2\end{math} which is 0.285m\begin{math}^2\end{math}.
 
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.35]{billeder/process-model}
-\caption{Process model used for the project}
-\label{pm}
+\includegraphics[scale=0.35]{billeder/predefined-area}
+\caption{The robots predefined area}
+\label{figure:Predefined area}
 \end{figure}
+
+\subsection{Microsoft Kinect}
+\label{sec:i1Microsoft Kinect}
+
+\subsection{Trajectory prediction}
+\label{sec:Trajectory prediction}
+When the trash, referred to in this section as the projectile, is detected and the tracking of that projectile has started, the trajectory can be predicted. This prediction is limited to the amount of data sent by the sensory camera, meaning that for every camera reading, one detection of the object is gained. The precision of the prediction will increase according to the time a projectile has been tracked. \newline 
+In this project, since the prediction is done indoor, the outdoor weather conditions that might affect the projectile trajectory is not considered. As well, the effects of air resistance, also called drag, will not be considered.
+
+The trajectory of a projectile is the path of a thrown projectile without propulsion, affected by gravity. For calculating a trajectory of a projectile, the initial height, the angle which the projectile is launced from, the speed of the projectile at launch and the gravitational acceleration must be taken into account. \newline 
+The initial height in this project is the height at which the projectile is detected, and the angle and speed at which the projectile is launched will be calculated from the first few trackings after detecting the projectile. The gravitational acceleration is considered as \(9.81m/s^2\), which is the standard near the earths surface. \newline
+In this project we are interested in catching the projectile, and to do that, we need to calculate the distance the projectile travels before hitting the ground, and the amount of time before the projectile hits the ground. This is done with two mathematical formulas: \newline
+\newline 
+\begin{math}
+g: \ the \ gravitational \ acceleration \ (9.81m/s^2)\newline
+\theta: \ the \ angle \ at \ launch 
+v: \ the \ speed \ at \ launch\newline
+y_{0}: \ the \ initial \ height\newline
+d: \ the \ total \ horizontal \ distance \ traveled \ \newline
+t: \ the \ time \ of \ flight\newline
+v_{vert}: \ the \ vertical \ velocity\newline
+v_{hori}: \ the \ horizontal \ velocity\newline
+t_{h}: \ the \ time \ since \ first \ detection\newline
+d_{t}: \ the \ distance \ at \ time \ t\newline
+\end{math}
+
+From these variables we can express the formulas needed to provide the total distance traveled by the projectile, and the amount of time this would take.\newline
+The distance traveled is:
+\[d = \dfrac{v \ cos \ \theta}{g}(v \ sin \ \theta + \sqrt{(v \ sin \ \theta)^2 \ + \ 2gy_{0}})\] \newline
+The time of flight is:
+\[t = \dfrac{d}{v \ cos \ \theta} = \dfrac{v \ sin \ \theta \ + \ \sqrt{(v \ sin \ \theta)^2 \ + \ 2gy_{0}}}{g}\]
+\newline
+
+To calculate a trajectory of the projectile, the altitude and distance of the projectile at any time during the flight must be calculated, according to the initial height ( \(y_{0}\) ):
+\[y = v_{vert}t - \dfrac{1}{2} gt^2\]
+\[d_{t} = v_{hori}t\]
+
+After this section, the projectile can be tracked, and the path for a given projectile can be calculated to a certain degree of correctness. 
 
 \section{Implementation}
 \label{sec:i1Implementation}
